{
  "version": 4,
  "terraform_version": "1.11.0",
  "serial": 159,
  "lineage": "df9cebf2-4158-4e5f-8a77-3038dce0746f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "iti-elastic-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ac54f46e2c88a503",
            "arn": "arn:aws:ec2:us-east-1:588738591182:elastic-ip/eipalloc-0ac54f46e2c88a503",
            "domain": "vpc",
            "id": "eipalloc-0ac54f46e2c88a503",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-80-74-9.compute-1.amazonaws.com",
            "public_ip": "54.80.74.9",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07f9449c0b700566e",
            "arn": "arn:aws:ec2:us-east-1:588738591182:instance/i-0e361f0f57e582355",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e361f0f57e582355",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a610f1a370a581f7",
            "private_dns": "ip-10-0-2-77.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.77",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f88361f0092a4521",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c009de7937d67700",
            "tags": {
              "Name": "application"
            },
            "tags_all": {
              "Name": "application"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-065f386d6ac2b79d7"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh_3port",
            "aws_subnet.iti-private-sn-1a",
            "aws_vpc.iti-vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07f9449c0b700566e",
            "arn": "arn:aws:ec2:us-east-1:588738591182:instance/i-081e6f629859e973e",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-081e6f629859e973e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e46241efcd18fd9b",
            "private_dns": "ip-10-0-0-226.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.226",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08962a61de4c141cb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08c64fa2f21615606",
            "tags": {
              "Name": "bastion"
            },
            "tags_all": {
              "Name": "bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ac14a77afc1f9fa9"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_subnet.iti-public-sn-1a",
            "aws_vpc.iti-vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "iti-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:588738591182:internet-gateway/igw-0b91734c13ba3fb62",
            "id": "igw-0b91734c13ba3fb62",
            "owner_id": "588738591182",
            "tags": {
              "Name": "ITI-IGW"
            },
            "tags_all": {
              "Name": "ITI-IGW"
            },
            "vpc_id": "vpc-004f4e405dc1ba579"
          },
          "dependencies": [
            "aws_vpc.iti-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "iti-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ac54f46e2c88a503",
            "association_id": "eipassoc-02d8ccf4b99805566",
            "connectivity_type": "public",
            "id": "nat-0df468fb8098b6f40",
            "network_interface_id": "eni-02523d8ea0e037183",
            "private_ip": "10.0.0.61",
            "public_ip": "54.80.74.9",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08c64fa2f21615606",
            "tags": {
              "Name": "ITI-NAT"
            },
            "tags_all": {
              "Name": "ITI-NAT"
            }
          },
          "dependencies": [
            "aws_eip.iti-elastic-ip",
            "aws_internet_gateway.iti-igw",
            "aws_subnet.iti-public-sn-1a",
            "aws_vpc.iti-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "iti-private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:588738591182:route-table/rtb-0306f9d194a39a031",
            "id": "rtb-0306f9d194a39a031",
            "owner_id": "588738591182",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0df468fb8098b6f40",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ITI-Private-RT"
            },
            "tags_all": {
              "Name": "ITI-Private-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-004f4e405dc1ba579"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.iti-elastic-ip",
            "aws_internet_gateway.iti-igw",
            "aws_nat_gateway.iti-nat",
            "aws_subnet.iti-public-sn-1a",
            "aws_vpc.iti-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "iti-public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:588738591182:route-table/rtb-0536877e83681d342",
            "id": "rtb-0536877e83681d342",
            "owner_id": "588738591182",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b91734c13ba3fb62",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ITI-Public-RT"
            },
            "tags_all": {
              "Name": "ITI-Public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-004f4e405dc1ba579"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.iti-igw",
            "aws_vpc.iti-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0075ff88c8fa9966e",
            "route_table_id": "rtb-0306f9d194a39a031",
            "subnet_id": "subnet-0c009de7937d67700"
          },
          "dependencies": [
            "aws_eip.iti-elastic-ip",
            "aws_internet_gateway.iti-igw",
            "aws_nat_gateway.iti-nat",
            "aws_route_table.iti-private-rt",
            "aws_subnet.iti-private-sn-1a",
            "aws_subnet.iti-public-sn-1a",
            "aws_vpc.iti-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0964f05b7bde0771e",
            "route_table_id": "rtb-0306f9d194a39a031",
            "subnet_id": "subnet-0869cd63077f7c1f3"
          },
          "dependencies": [
            "aws_eip.iti-elastic-ip",
            "aws_internet_gateway.iti-igw",
            "aws_nat_gateway.iti-nat",
            "aws_route_table.iti-private-rt",
            "aws_subnet.iti-private-sn-1b",
            "aws_subnet.iti-public-sn-1a",
            "aws_vpc.iti-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0026ec659158cfb51",
            "route_table_id": "rtb-0536877e83681d342",
            "subnet_id": "subnet-08c64fa2f21615606"
          },
          "dependencies": [
            "aws_internet_gateway.iti-igw",
            "aws_route_table.iti-public-rt",
            "aws_subnet.iti-public-sn-1a",
            "aws_vpc.iti-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eb553f8e5d34f2c6",
            "route_table_id": "rtb-0536877e83681d342",
            "subnet_id": "subnet-03095e9dad43cd367"
          },
          "dependencies": [
            "aws_internet_gateway.iti-igw",
            "aws_route_table.iti-public-rt",
            "aws_subnet.iti-public-sn-1b",
            "aws_vpc.iti-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:588738591182:security-group/sg-0ac14a77afc1f9fa9",
            "description": "Allow SSH inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-0ac14a77afc1f9fa9",
            "ingress": [],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "588738591182",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "tags_all": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-004f4e405dc1ba579"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.iti-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_3port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:588738591182:security-group/sg-065f386d6ac2b79d7",
            "description": "Allow SSH and port 3000",
            "egress": [],
            "id": "sg-065f386d6ac2b79d7",
            "ingress": [],
            "name": "allow_ssh_3port",
            "name_prefix": "",
            "owner_id": "588738591182",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh_3Port"
            },
            "tags_all": {
              "Name": "allow_ssh_3Port"
            },
            "timeouts": null,
            "vpc_id": "vpc-004f4e405dc1ba579"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.iti-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "iti-private-sn-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:588738591182:subnet/subnet-0c009de7937d67700",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c009de7937d67700",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "588738591182",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ITI-Private-SN-1A"
            },
            "tags_all": {
              "Name": "ITI-Private-SN-1A"
            },
            "vpc_id": "vpc-004f4e405dc1ba579"
          },
          "dependencies": [
            "aws_vpc.iti-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "iti-private-sn-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:588738591182:subnet/subnet-0869cd63077f7c1f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0869cd63077f7c1f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "588738591182",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ITI-Private-SN-1B"
            },
            "tags_all": {
              "Name": "ITI-Private-SN-1B"
            },
            "vpc_id": "vpc-004f4e405dc1ba579"
          },
          "dependencies": [
            "aws_vpc.iti-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "iti-public-sn-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:588738591182:subnet/subnet-08c64fa2f21615606",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c64fa2f21615606",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "588738591182",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ITI-Public-SN-1A"
            },
            "tags_all": {
              "Name": "ITI-Public-SN-1A"
            },
            "vpc_id": "vpc-004f4e405dc1ba579"
          },
          "dependencies": [
            "aws_vpc.iti-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "iti-public-sn-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:588738591182:subnet/subnet-03095e9dad43cd367",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03095e9dad43cd367",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "588738591182",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ITI-Public-SN-1B"
            },
            "tags_all": {
              "Name": "ITI-Public-SN-1B"
            },
            "vpc_id": "vpc-004f4e405dc1ba579"
          },
          "dependencies": [
            "aws_vpc.iti-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "iti-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:588738591182:vpc/vpc-004f4e405dc1ba579",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fbf7d496f2fb1e1c",
            "default_route_table_id": "rtb-0bb9ecbaac6bacc48",
            "default_security_group_id": "sg-02eecb8c409d73d8a",
            "dhcp_options_id": "dopt-09a6a157f46b3e5db",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-004f4e405dc1ba579",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bb9ecbaac6bacc48",
            "owner_id": "588738591182",
            "tags": {
              "Name": "ITI-VPC"
            },
            "tags_all": {
              "Name": "ITI-VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_3000_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:588738591182:security-group-rule/sgr-014be5d5c781c5cab",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3000,
            "id": "sgr-014be5d5c781c5cab",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-065f386d6ac2b79d7",
            "security_group_rule_id": "sgr-014be5d5c781c5cab",
            "tags": null,
            "tags_all": {},
            "to_port": 3000
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_ssh_3port",
            "aws_vpc.iti-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:588738591182:security-group-rule/sgr-0f0e818193ccac4a4",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0f0e818193ccac4a4",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-065f386d6ac2b79d7",
            "security_group_rule_id": "sgr-0f0e818193ccac4a4",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_ssh_3port",
            "aws_vpc.iti-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:588738591182:security-group-rule/sgr-0ab0cd35cad574275",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0ab0cd35cad574275",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0ac14a77afc1f9fa9",
            "security_group_rule_id": "sgr-0ab0cd35cad574275",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_vpc.iti-vpc"
          ]
        }
      ]
    }
  ]
}